--- a/plugin.xml
+++ b/plugin.xml
@@ -2,7 +2,7 @@
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android"
         id="cordova-plugin-googleplus"
-        version="5.1.1">
+        version="5.1.1-2">
 
   <name>Google SignIn</name>
 
@@ -14,9 +14,9 @@
 
   <keywords>Google, Google SignIn, GoogleSignIn, Google Login, Login, OAuth, Identity, Authentication</keywords>
 
-  <repo>https://github.com/EddyVerbruggen/cordova-plugin-googleplus.git</repo>
+  <repo>https://github.com/fonoma/cordova-plugin-googleplus.git</repo>
 
-  <issue>https://github.com/EddyVerbruggen/cordova-plugin-googleplus/issues</issue>
+  <issue>https://github.com/fonoma/cordova-plugin-googleplus/issues</issue>
 
   <engines>
     <engine name="cordova" version=">=3.5.0"/>
@@ -29,8 +29,8 @@
   <!-- android -->
   <platform name="android">
 
-    <framework src="com.google.android.gms:play-services-auth:+" />
-    <framework src="com.google.android.gms:play-services-identity:+" />
+    <framework src="com.google.android.gms:play-services-auth:11.+" />
+    <framework src="com.google.android.gms:play-services-identity:11.+" />
 
     <config-file target="res/xml/config.xml" parent="/*">
       <feature name="GooglePlus">
